tests/lifetime/unborrow/unborrow_invalid.err.expected
error: at 43:5: [TC-UnborrowNonReference] In function 'unborrow_of_non_ref_type', block 'entry': unborrow requires a reference-typed place, found i64
    |
 42 |   entry:
 43 |     unborrow x;
    |     ^^^^^^^^^^
 44 |     return
    |
error: at 22:5: [INIT-UseAfterMove] In function 'unborrow_after_move', block 'entry': variable 'r' is used after move
    |
 21 |     call sink(move r);
 22 |     unborrow r;
    |     ^^^^^^^^^^
 23 |     return
    |
error: at 33:5: [INIT-UseBeforeInit] In function 'unborrow_of_uninit', block 'entry': variable 'r' is used before initialization
    |
 32 |   entry:
 33 |     unborrow r;
    |     ^^^^^^^^^^
 34 |     return
    |
error: at 56:5: [INIT-RefObligationUnfulfilled] In function 'unborrow_with_unfulfilled_obligation', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 51 | # obligation unfulfilled; unborrow is rejected.
 52 | fn unborrow_with_unfulfilled_obligation(r: &mut i64) {
    |                                         ----------- reference declared here
 53 |   x: i64;
    |
    | ...
    |
 55 |     x = move r.*;
 56 |     unborrow r;
    |     ^^^^^^^^^^
 57 |     return
    |
